Правлю по ревью
Исправил дату и автора

--- a/index.html
+++ b/index.html
@@ -81,12 +81,17 @@
             стране. Мы выбрали и описали некоторые интересные места, достойные
             вашего отпуска.
           </p>
-          <p class="intro__content-row_text_autor">
-            Автор текста:<span class="content-row__span-accent"
-              >В.В. Пупкин</span
-            >Дата:<span class="content-row__span-accent">17.06.17</span>
-            <!-- Нужно исправить: на макете автор текста и дата написаны в две строки, а не в четыре -->
-          </p>
+          <div class="intro__contenr-row_autor">
+            <p class="intro__content-row_text_autor">
+              Автор текста:<span class="content-row__span-accent"></span>
+                В.В. Пупкин</span
+              >
+              <!-- Нужно исправить: на макете автор текста и дата написаны в две строки, а не в четыре +++++Исправил-->
+            </p>
+            <p class="intro__content-row_text_autor">
+              Дата:<span class="content-row__span-accent"> 17.06.17</span>
+            </p>
+          </div>
         </div>
         <ul class="intro__list">
           <li class="intro__list_text">Часовых поясов 11</li>
