Исправил вес цифр
В блоке intro

--- a/index.html
+++ b/index.html
@@ -94,16 +94,16 @@
           </div>
         </div>
         <ul class="intro__list">
-          <li class="intro__list_text">Часовых поясов 11</li>
+          <li class="intro__list_text">Часовых поясов<span class="list_text-span"> 11</span></li>
           <li class="intro__list_text">
-            Объектов природного наследия ЮНЕСКО 12
+            Объектов природного наследия ЮНЕСКО <span class="list_text-span"> 12</span>
           </li>
           <li class="intro__list_text">
-            Объектов культурного наследия ЮНЕСКО 16
+            Объектов культурного наследия ЮНЕСКО <span class="list_text-span"> 16</span>
           </li>
-          <li class="intro__list_text">Природных заповедников 105</li>
-          <li class="intro__list_text">Аэропортов 241</li>
-          <!-- Нужно исправить: здесь текст должен быть полужирный, а цифры нет -->
+          <li class="intro__list_text">Природных заповедников <span class="list_text-span"> 105</span></li>
+          <li class="intro__list_text">Аэропортов <span class="list_text-span"> 241</span></li>
+          <!-- Нужно исправить: здесь текст должен быть полужирный, а цифры нет +++ Исправил-->
         </ul>
       </div>
       <div class="photo">
