--- a/index.html
+++ b/index.html
@@ -22,22 +22,22 @@
           <a href="#" class="link header__lang header__lang_active">Ru</a>
           <!-- 
             Нужно исправить:
-            На теге не может быть класс модификатора без класса блока или элемента, который этим модификатором модифицируется.
+            На теге не может быть класс модификатора без класса блока или элемента, который этим модификатором модифицируется. +++исправил
           -->
           <!-- 
             Нужно исправить:
             Такие модификаторы - header__lang_ru, header__lang_en - не лучая практика.
             Потому что если язык EN изменится, например, на ES, то придётся менять название этого модификатора и в html и в css.
             Лучше использовать более абстрактые имена модификаторов. Здесь вместо двух модификаторов нужен один простой (булевый) модификатор.
-            Назвать его можно, например, isActive и применить только к активному в данный момент языку.
+            Назвать его можно, например, isActive и применить только к активному в данный момент языку.   ++++ исправил
           -->
           <!-- 
             Нужно исправить:
-            Подчёркнут должен быть только язык Ru, и не по ховеру на него, а постоянно.
+            Подчёркнут должен быть только язык Ru, и не по ховеру на него, а постоянно. +++исправил
           -->
           <!--
             Надо исправить: 
-            Для того, чтобы подчеркнуть "выбранный" язык, нужно использовать модификатор, например, _active или _selected
+            Для того, чтобы подчеркнуть "выбранный" язык, нужно использовать модификатор, например, _active или _selected +++исправил
           -->
         </div>
       </header>
@@ -513,12 +513,20 @@
       </div>
       <footer class="footer">
         <p class="text text__copyright">&copy; 2020. Олег Черняков</p>
-        <!--разобратьс с li-->
+        
         <ul class="footer__list">
           <li><a
-            href="https://travel.yandex.ru/?utm_source=yamain&utm_medium=popup&utm_campaign=travel_ru"
+            href="https://yandex.ru/maps/213/moscow/?ll=37.622504%2C55.753215&z=10"
             class="link footer__link"
-            >Путешествия</a
+            >Карты</a
+          ></li>
+          <li><a href="https://yandex.ru/pogoda/moscow" class="link footer__link"
+            >Погода</a
+          ></li>
+          <li><a
+            href="https://rasp.yandex.ru/?utm_source=yamain&utm_medium=popup&utm_campaign=rasp_ru"
+            class="link footer__link"
+            >Расписание</a
           ></li>
           <li><a
             href="https://calendar.yandex.ru/week?uid=952628032"
@@ -526,17 +534,9 @@
             >Календарь</a
           ></li>
           <li><a
-            href="https://rasp.yandex.ru/?utm_source=yamain&utm_medium=popup&utm_campaign=rasp_ru"
+            href="https://travel.yandex.ru/?utm_source=yamain&utm_medium=popup&utm_campaign=travel_ru"
             class="link footer__link"
-            >Расписание</a
-          ></li>
-          <li><a href="https://yandex.ru/pogoda/moscow" class="link footer__link"
-            >Погода</a
-          ></li>
-          <li><a
-            href="https://yandex.ru/maps/213/moscow/?ll=37.622504%2C55.753215&z=10"
-            class="link footer__link"
-            >Карты</a
+            >Путешествия</a
           ></li>
         </ul>
         
