--- a/index.html
+++ b/index.html
@@ -576,7 +576,7 @@
 
   Можно лучше:
   - Структура папок не самая лучшая. Есть папка images, в которой по идее должны лежать картинки, но там только пустой css файл.+++Убрал
-    В папке pages лежат некоторые блоки. Файлов в которых подключаются шрифты 2 штуки. Хорошо бы один из них удалить, чтобы не путал.++++ не совсем понял
+    В папке pages лежат некоторые блоки. Файлов в которых подключаются шрифты 2 штуки. Хорошо бы один из них удалить, чтобы не путал.++++ не совсем понял. У меня же шрифты поключаются в вендере
   - Если просто скопировать из фигмы все отступы, размеры шрифтов, высоты строк и всё прочее, то на выходе работа всё равно будет отличаться от того, что нарисовано в фигме.
     Чтобы проверить насколько ваша работа на самом деле отличается от того, что нарисовано в фигме можно воспользоваться плагином для хрома - https://chrome.google.com/webstore/detail/perfectpixel-by-welldonec/dkaagdgjmgdmbnecmcefdhjekcoceebi
 
