Получил новые замечания

--- a/index.html
+++ b/index.html
@@ -12,32 +12,13 @@
     <div class="page">
       <header class="header">
         <img src="foto/logo.svg" alt="Логотип" class="header__iogo" />
-        <!-- Нужно исправить: логотип это контентное изображение. Его нужно вставить на страницу с помощью <img> ****Исправил-->
-        <!-- 
-          Нужно исправить:
-          Логотип должен быть в формате .svg.   *****исправил
-        -->
         <div class="header__lang">
           <a href="#" class="link header__lang  header__lang_not-active">En</a>
           <a href="#" class="link header__lang header__lang_active">Ru</a>
-          <!-- 
-            Нужно исправить:
-            На теге не может быть класс модификатора без класса блока или элемента, который этим модификатором модифицируется. +++исправил
-          -->
-          <!-- 
-            Нужно исправить:
-            Такие модификаторы - header__lang_ru, header__lang_en - не лучая практика.
-            Потому что если язык EN изменится, например, на ES, то придётся менять название этого модификатора и в html и в css.
-            Лучше использовать более абстрактые имена модификаторов. Здесь вместо двух модификаторов нужен один простой (булевый) модификатор.
-            Назвать его можно, например, isActive и применить только к активному в данный момент языку.   ++++ исправил
-          -->
-          <!-- 
-            Нужно исправить:
-            Подчёркнут должен быть только язык Ru, и не по ховеру на него, а постоянно. +++исправил
-          -->
+          <!-- Нужно исправить: языки перепутаны местами. -->
           <!--
             Надо исправить: 
-            Для того, чтобы подчеркнуть "выбранный" язык, нужно использовать модификатор, например, _active или _selected +++исправил
+            Здесь нужен только один модификатор на выбранном в данный момент языке.
           -->
         </div>
       </header>
@@ -62,8 +43,8 @@
           <p class="text intro__content-row intro__content-row_text">
             <!-- 
             Нужно исправить: 
-            Здесь тоже класс модификатора без класса блока или элемента, который этим модификатором модифицируется. ++++исправил
-            Ну и простой модификатор применер не по назначению.                                                          +++Простой модификатор, имеется ввиду text? Но он же задаёт стиль общим шрифтам
+            Ну и простой модификатор применер не по назначению.        +++Простой модификатор, имеется ввиду text? Но он же задаёт стиль общим шрифтам
+            Под простым модификатором имеется ввиду это - intro__content-row_text.
 
             Простые модификаторы в БЭМ применяются для каких-то бинарных штук. У которых только два состояния.
             Например, для активного языка в хедере можно использовать простой модификатор _isActive. Т.к. тут может быть только два состояния - язык или активен или нет.
@@ -82,35 +63,52 @@
             вашего отпуска.
           </p>
           <div class="intro__contenr-row_autor">
+          <!-- 
+            Нужно исправить: 
+            Выше я писал комментарий "На теге не может быть класс модификатора без класса блока или элемента, который этим модификатором модифицируется.", но 
+            забыл добавить, что это нужно исправить по всей работе =(
+
+            Сейчас пройдусь по всей работе и добавлю комментарии рядом со всеми подобными ошибками.
+          -->
             <p class="intro__content-row_text_autor">
+            <!-- Нужно исправить: БЭМ сущность содержит в себе только модификатор -->
               Автор текста:
               <span class="content-row__span-accent"> В.В.Пупкин</span>
-              <!-- Нужно исправить: на макете автор текста и дата написаны в две строки, а не в четыре +++++Исправил-->
             </p>
             <p class="intro__content-row_text_autor">
+            <!-- Нужно исправить: БЭМ сущность содержит в себе только модификатор -->
               Дата:<span class="content-row__span-accent"> 17.06.17</span>
             </p>
           </div>
         </div>
         <ul class="intro__list">
           <li class="intro__list_text">
+          <!-- Нужно исправить: БЭМ сущность содержит в себе только модификатор -->
             Часовых поясов<span class="list_text-span"> 11</span>
+            <!-- Нужно исправить: БЭМ сущность содержит в себе только модификатор -->
           </li>
           <li class="intro__list_text">
+          <!-- Нужно исправить: БЭМ сущность содержит в себе только модификатор -->
             Объектов природного наследия ЮНЕСКО
             <span class="list_text-span"> 12</span>
+          <!-- Нужно исправить: БЭМ сущность содержит в себе только модификатор -->
           </li>
           <li class="intro__list_text">
+          <!-- Нужно исправить: БЭМ сущность содержит в себе только модификатор -->
             Объектов культурного наследия ЮНЕСКО
             <span class="list_text-span"> 16</span>
+            <!-- Нужно исправить: БЭМ сущность содержит в себе только модификатор -->
           </li>
           <li class="intro__list_text">
+          <!-- Нужно исправить: БЭМ сущность содержит в себе только модификатор -->
             Природных заповедников <span class="list_text-span"> 105</span>
+            <!-- Нужно исправить: БЭМ сущность содержит в себе только модификатор -->
           </li>
           <li class="intro__list_text">
+          <!-- Нужно исправить: БЭМ сущность содержит в себе только модификатор -->
             Аэропортов <span class="list_text-span"> 241</span>
+            <!-- Нужно исправить: БЭМ сущность содержит в себе только модификатор -->
           </li>
-          <!-- Нужно исправить: здесь текст должен быть полужирный, а цифры нет +++ Исправил-->
         </ul>
       </div>
       <div class="photo">
@@ -177,14 +175,21 @@
       </div>
       <div class="places">
         <div class="places__place">
-          <!-- Нужно исправить: отступы между .places__place намного больше, чем в макете +++++ исправил-->
+          <!-- 
+            Нужно исправить: 
+            отступы между .places__place намного больше, чем в макете.
+          -->
           <h2 class="title place__title">Куршская коса</h2>
+          <!-- Нужно исправить: здесь title - это элемент блока place. А самого блока place нет =( -->
           <div class="place__website">
+          <!-- Нужно исправить: здесь website - это элемент блока place. А самого блока place нет =( -->
             <p class="place__website_url-heading">URL</p>
             <a href="http://park-kosa.ru/" class="link place__website_url"
               >park-kosa.ru</a
             >
-            <!-- Нужно исправить: ссылка сейчас имеет ширину контейнера, в который она вложена (попробуйте поводить курсором справа от ссылки). Так быть не должно. ++++ corrected-->
+            <!-- Нужно исправить: здесь website_url-heading - это модификатор элемента website, который в свою очередь является элементом блока place. А самого блока place нет =( -->
+            <!-- Нужно исправить: На теге не может быть класс модификатора без класса блока или элемента, который этим модификатором модифицируется. -->
+            <!-- Нужно исправить: по макету эта ссылка должна быть подчеркнута постоянно, а не по ховеру. -->
           </div>
           <img src="foto/kosa.jpg" alt="Куршская коса" class="place__image" />
           <div class="paragraph">
@@ -202,6 +207,11 @@
               исключает суету, окуная в спокойствие природы и запах стального,
               прохладного моря.
             </p>
+            <!-- 
+              Нужно исправить: 
+              У этих двух параграфов практически идентичные стили. Соответственно эти два параграфа - один и этот же элемент.
+              Чтобы убрать марджин можно использовать :first-child или :last-child.
+            -->
           </div>
         </div>
 
@@ -214,6 +224,7 @@
               class="link place__website_url"
               >National Geographic</a
             >
+            <!-- Нужно исправить: На теге не может быть класс модификатора без класса блока или элемента, который этим модификатором модифицируется. -->
           </div>
           <img src="foto/kolsky.jpg" alt="Кольский" class="place__image" />
           <div class="paragraph">
@@ -243,6 +254,7 @@
               class="link place__website_url"
               >Facebook</a
             >
+            <!-- Нужно исправить: На теге не может быть класс модификатора без класса блока или элемента, который этим модификатором модифицируется. -->
           </div>
           <img src="foto/altai.jpg" alt="Алтай" class="place__image" />
           <div class="paragraph">
@@ -269,6 +281,7 @@
             <a href="https://vk.com/baikalmile" class="link place__website_url"
               >https://vk.com/baikalmile</a
             >
+            <!-- Нужно исправить: На теге не может быть класс модификатора без класса блока или элемента, который этим модификатором модифицируется. -->
           </div>
           <img
             src="foto/winter-baikal.jpg"
@@ -298,6 +311,7 @@
             <a href="http://vodlozero.ru/" class="link place__website_url"
               >http://vodlozero.ru/</a
             >
+            <!-- Нужно исправить: На теге не может быть класс модификатора без класса блока или элемента, который этим модификатором модифицируется. -->
           </div>
           <img src="foto/karelia.jpg" alt="Карелия" class="place__image" />
           <div class="paragraph">
@@ -324,11 +338,13 @@
         <div class="video__conteiner">
           <a href="https://vimeo.com/81106671" class="link">
             <div class="conteiner conteiner__video-item">
+            <!-- Нужно исправить: блок не может быть элементов самого же себя. -->
               <img
                 src="foto/icon_play.svg"
                 alt="Иконка Пуск"
                 class="item__icon_play"
               />
+              <!-- Нужно исправить: БЭМ сущность содержит в себе только модификатор -->
               <div class="item__rect">
                 <p class="item__duration">6:30</p>
                 <h3 class="title item__title">Colors of Kamchatka</h3>
@@ -340,11 +356,13 @@
           </a>
           <a href="https://vimeo.com/290675450" class="link">
             <div class="conteiner conteiner__video-observatory">
+            <!-- Нужно исправить: блок не может быть элементов самого же себя. -->
               <img
                 src="foto/icon_play.svg"
                 alt="Иконка Пуск"
                 class="item__icon_play"
               />
+              <!-- Нужно исправить: БЭМ сущность содержит в себе только модификатор -->
               <div class="item__rect">
                 <p class="item__duration">24:45</p>
                 <h3 class="title item__title">Обсерватория | Observatory</h3>
@@ -354,7 +372,12 @@
               </div>
             </div>
           </a>
-          <!-- Нужно исправить: карточки с видео оценить не могу, т.к. фоновые картинки не загрузились. ++++исправил путь-->
+          <!-- Нужно исправить: у видео-карточек в макете скруглены углы. -->
+          <!-- 
+            Нужно исправить:
+            При затемнении фона текст и иконка должены оставаться белыми.
+            Затемнение лучше делать с помощью псевдоэлементов (::before или ::after)
+          -->
         </div>
       </div>
       <div class="additional">
@@ -362,7 +385,6 @@
         <h3 class="subtitle additional__subtitle">
           места, рекомендованные нашими фотографами
         </h3>
-        <!-- Нужно исправить: у h3 шрифт не по макету +++ Исправил... очень обидная ошибка-->
         <div class="additional__conteiner">
           <div class="additional__item additional__item-nvr">
             <h4 class="title additional__heading-title">
@@ -400,7 +422,12 @@
               тут при древнем поселении на реке Угра.
             </p>
           </div>
-          <!-- Нужно исправить: эти карточки тоже оценить не могу, т.к. фоновые картинки не загрузились. +++++Иправил пути-->
+          <!-- 
+            Нужно исправить: 
+            Картинки в этой секции должны быть затемнены.
+            Текст при этом должен оставаться белым.
+            Затемнение лучше делать с помощью псевдоэлементов (::before или ::after)
+          -->
         </div>
       </div>
       <div class="comments">
@@ -411,7 +438,6 @@
           Природа и люди вдохновили их работы, удостоенные наград на
           международных конкурсах
         </h3>
-        <!-- Нужно исправить: на макете есть отступ между h3 и .comments__container +++ Обидная ошибка... исправил-->
         <div class="comments__container">
           <div class="container__comment">
             <img
@@ -464,13 +490,15 @@
           По мотивам учебной темы о Транссибе и iframes — путешествие от столицы
           до Байкала на электричках.
         </h3>
-        <!-- Нужно исправить: cover тоже оценить не могу, т.к. фоновое изображении не загрузилось. ++++++исправил-->
+        <!-- Нужно исправить: у h3 жирность шрифта не по макету. -->
+        <!-- Нужно исправить: при ховере фон должен затемняться, а текст должен оставаться белым. -->
+        <!-- Нужно исправить: ну и underline у текста быть не должно. -->
+        <!-- Можно лучше: кажется, что h3 здесь это не заголовок, а параграф. -->
       </a>
       <div class="emblem">
         <h2 class="title emblem__title">
           Природа на гербах российских городов
         </h2>
-        <!-- Нужно исправить: отступ между h2 и .emblem__items не по макету +++исправил-->
         <div class="emblem__items">
           <div class="emblem__item">
             <img src="foto/nvg.png" alt="Герб Новгорода" class="item__image" />
@@ -491,6 +519,7 @@
               class="item__image"
             />
             <p class="item__city">Елабуга</p>
+            <!-- Нужно исправить: по макету у герба Елабуги под деревом нет белого фона. -->
           </div>
           <div class="emblem__item">
             <img src="foto/perm.png" alt="Герб Перьми" class="item__image" />
@@ -498,10 +527,12 @@
             <p class="item__city">Пермь</p>
           </div>
         </div>
+        <!-- Нужно исправить: отступ между первым гербом и текстом по макету, а у остальных гербов отступ больше, чем в макете. -->
       </div>
       <div class="barentsburg">
         <h2 class="title barentsburg__title">Баренцбург</h2>
         <p class="text barentsburg__coord">78.0648° с.ш. 14.2335° в.д.</p>
+        <!-- можно лучше: для значка градусов тоже есть мнемоник - &deg; -->
         <img src="foto/map.jpg" alt="Фото крты" class="barentsburg__map" />
         <div class="barentsburg__description">
           <p class="text barentsburg__description-text">
@@ -520,7 +551,7 @@
       </div>
       <footer class="footer">
         <p class="text text__copyright">&copy; 2020. Олег Черняков</p>
-
+        <!-- Нужно исправить: блок не может быть элементом самого себя =( -->
         <ul class="footer__list">
           <li>
             <a
@@ -556,35 +587,38 @@
             >
           </li>
         </ul>
-
-        <!-- Нужно исправить: оступы между ссылками не по макету. ++++исправил-->
-        <!-- Нужно исправить: эти ссылки должны быть в теге nav (а параграф с копирайтом нет) ++++ Исправил-->
       </footer>
     </div>
   </body>
 </html>
 
 <!-- 
-  В целом работа хорошая. +++++ Спасибо! Приятно это услышать от профессионала!
-  Что смог поревьювить без фоновых картинок - поревьювил. Остальное поревьювлю после внесения правок.
+  Плагином, про который написано в "можно лучше" очень советую воспользоваться.
+  С его помощью вы сами сможете увидеть большое количество расхождений с макетом.
+  А расхождения эти совершенно точно будут, если просто скопировать оступы из фигмы. Т.к. в фигме не учитывается line-height.
 
-  Что понравилось:
-  - Почти нет проблем с БЭМ (в хедере и в интро только перемудрили с модификаторами =( ) +++++Да уж... просто сначала запутался и немного нагородил... БЭМ штука не простая) Учту в дальнейшем
-  - Реализована nested структура файлов по БЭМ
-  - Всё довольно семантичненько
-  - Правильно подключены шрифты
+
+  Ну и с БЭМ модификаторами ещё есть проблемы.
+  Обязательно нужно разобраться чем элемент отличается от модификатора. И чем простой модификатор отличается от обычного.
+  БЭМ штука не простая, да. Но разобраться с ним нужно, т.к. он применятся буквально везде. Чуть ли не на каждом сайте.
+  Если сделать правильную nested структуру папок и файлов по БЭМ, то это тоже поможет лучше понять БЭМ.
+
+
 
   Можно лучше:
-  - Структура папок не самая лучшая. Есть папка images, в которой по идее должны лежать картинки, но там только пустой css файл.+++Убрал
-    В папке pages лежат некоторые блоки. Файлов в которых подключаются шрифты 2 штуки. Хорошо бы один из них удалить, чтобы не путал.++++ не совсем понял. У меня же шрифты поключаются в вендере
+  - Структура папок не самая лучшая. В папке pages лежат некоторые блоки. Файлов в которых подключаются шрифты 2 штуки. 
+    Хорошо бы один из них удалить, чтобы не путал.
+
+    ++++ не совсем понял. У меня же шрифты поключаются в вендере
+    В vendor у вас сейчас два .css файла - inter.css и font.css. Один из них явно лишний.
+
   - Если просто скопировать из фигмы все отступы, размеры шрифтов, высоты строк и всё прочее, то на выходе работа всё равно будет отличаться от того, что нарисовано в фигме.
     Чтобы проверить насколько ваша работа на самом деле отличается от того, что нарисовано в фигме можно воспользоваться плагином для хрома - https://chrome.google.com/webstore/detail/perfectpixel-by-welldonec/dkaagdgjmgdmbnecmcefdhjekcoceebi
 
   Нужно исправить:
+  - Стили нужно иcправить так, чтобы не было белых полей и чтобы вся страница имела такой же фон, как и контент. <- забыл это написать при первой проверке >.<
   - Все "Нужно исправить"
-  - Контентные изображения имеют alt с корректным описанием, соответствующим языку страницы. <- это цитата из чеклиста для самопроверки. +++Перевёл на Русский :-)
-  - В css неправильно указаны пути к картинкам. +++Исправил
-  - Обратите внимание, что на странице используется на 3 жирности шрифта, а 4. font-weight: 500 (Inter-Medium) используется на продолжительности видео. +++исправил. Добавил шрифт
+
 
 
   Всегда используйте валидатор для самопроверки верстки https://validator.w3.org/#validate_by_input
