--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
       <header class="header">
         <img src="foto/logo.svg" alt="Логотип" class="header__iogo" />
         <div class="header__lang">
-          <a href="#" class="link header__lang  header__lang_not-active">En</a>
           <a href="#" class="link header__lang header__lang_active">Ru</a>
-          <!-- Нужно исправить: языки перепутаны местами. -->
+          <a href="#" class="link header__lang">En</a>
+          
+          <!-- Нужно исправить: языки перепутаны местами. +++Исправил-->
           <!--
             Надо исправить: 
-            Здесь нужен только один модификатор на выбранном в данный момент языке.
+            Здесь нужен только один модификатор на выбранном в данный момент языке.+++исправил
           -->
         </div>
       </header>
@@ -177,7 +178,7 @@
         <div class="places__place">
           <!-- 
             Нужно исправить: 
-            отступы между .places__place намного больше, чем в макете.
+            отступы между .places__place намного больше, чем в макете. +++исправил
           -->
           <h2 class="title place__title">Куршская коса</h2>
           <!-- Нужно исправить: здесь title - это элемент блока place. А самого блока place нет =( -->
@@ -189,11 +190,11 @@
             >
             <!-- Нужно исправить: здесь website_url-heading - это модификатор элемента website, который в свою очередь является элементом блока place. А самого блока place нет =( -->
             <!-- Нужно исправить: На теге не может быть класс модификатора без класса блока или элемента, который этим модификатором модифицируется. -->
-            <!-- Нужно исправить: по макету эта ссылка должна быть подчеркнута постоянно, а не по ховеру. -->
+            <!-- Нужно исправить: по макету эта ссылка должна быть подчеркнута постоянно, а не по ховеру.+++исправил -->
           </div>
           <img src="foto/kosa.jpg" alt="Куршская коса" class="place__image" />
           <div class="paragraph">
-            <p class="text place__paragraph-spit">
+            <p class="text place__paragraph-region">
               Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных
               горизонта — спокойного Куршского залива с одной стороны и
               подёрнутого рябью волн Балтийского моря с другой. Уникальная
@@ -210,7 +211,7 @@
             <!-- 
               Нужно исправить: 
               У этих двух параграфов практически идентичные стили. Соответственно эти два параграфа - один и этот же элемент.
-              Чтобы убрать марджин можно использовать :first-child или :last-child.
+              Чтобы убрать марджин можно использовать :first-child или :last-child. +++исправил
             -->
           </div>
         </div>
@@ -228,7 +229,7 @@
           </div>
           <img src="foto/kolsky.jpg" alt="Кольский" class="place__image" />
           <div class="paragraph">
-            <p class="text place__paragraph-spit">
+            <p class="text place__paragraph-region">
               Почти весь полуостров находится за Полярным кругом. Саамская
               тундра, от которой на юг — тайга, а на север — Ледовитый океан,
               прикидывающийся Баренцевым морем.
@@ -258,7 +259,7 @@
           </div>
           <img src="foto/altai.jpg" alt="Алтай" class="place__image" />
           <div class="paragraph">
-            <p class="text place__paragraph-spit">
+            <p class="text place__paragraph-region">
               Алтай — одно из красивейших мест в России. В первую очередь из-за
               гор: если ехать вдоль хребта, вы увидите склоны, усыпанные
               соснами, горные реки и озёра. А если вы откроете в автомобиле
@@ -289,7 +290,7 @@
             class="place__image"
           />
           <div class="paragraph">
-            <p class="text place__paragraph-spit">
+            <p class="text place__paragraph-region">
               Всем известен Байкал как крупнейшее озеро в мире. Многие также
               знают, что это самый большой источник пресной воды и одно из
               красивейших мест в России.
@@ -315,7 +316,7 @@
           </div>
           <img src="foto/karelia.jpg" alt="Карелия" class="place__image" />
           <div class="paragraph">
-            <p class="text place__paragraph-spit">
+            <p class="text place__paragraph-region">
               Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу
               сибирская лиственница не растёт западнее Водлозера. Зато здесь она
               вымахивает на 30 метров — леса карельских национальных парков
