--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
           фундаментальные исследования
         </h3>
         <div class="video__conteiner">
-          <a href="https://vimeo.com/81106671" class="link">
+          <a href="https://vimeo.com/81106671" class="video__item-link">
             <div class="conteiner conteiner__video-item">
             <!-- Нужно исправить: блок не может быть элементов самого же себя. -->
               <img
@@ -355,7 +355,7 @@
               </div>
             </div>
           </a>
-          <a href="https://vimeo.com/290675450" class="link">
+          <a href="https://vimeo.com/290675450" class="video__item-link">
             <div class="conteiner conteiner__video-observatory">
             <!-- Нужно исправить: блок не может быть элементов самого же себя. -->
               <img
@@ -373,7 +373,7 @@
               </div>
             </div>
           </a>
-          <!-- Нужно исправить: у видео-карточек в макете скруглены углы. -->
+          <!-- Нужно исправить: у видео-карточек в макете скруглены углы. +++исправил-->
           <!-- 
             Нужно исправить:
             При затемнении фона текст и иконка должены оставаться белыми.
