Следующий шак additional

--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
           <!-- 
             Нужно исправить:
             При затемнении фона текст и иконка должены оставаться белыми.
-            Затемнение лучше делать с помощью псевдоэлементов (::before или ::after)
+            Затемнение лучше делать с помощью псевдоэлементов (::before или ::after) +++исправил... да уж...
           -->
         </div>
       </div>
