--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
             Нужно исправить: 
             Картинки в этой секции должны быть затемнены.
             Текст при этом должен оставаться белым.
-            Затемнение лучше делать с помощью псевдоэлементов (::before или ::after)
+            Затемнение лучше делать с помощью псевдоэлементов (::before или ::after) ++++ немного пошёл по другому пути, но исправил
           -->
         </div>
       </div>
