--- a/index.html
+++ b/index.html
@@ -484,17 +484,17 @@
       </div>
       <a
         href="https://stampsy.com/na-elektrichkakh-do-baikala"
-        class="link cover"
+        class="cover"
       >
         <h2 class="title cover__title">До Байкала «на собаках»</h2>
-        <h3 class="title cover__subtitle">
+        <p class="text cover__subtitle">
           По мотивам учебной темы о Транссибе и iframes — путешествие от столицы
           до Байкала на электричках.
-        </h3>
-        <!-- Нужно исправить: у h3 жирность шрифта не по макету. -->
-        <!-- Нужно исправить: при ховере фон должен затемняться, а текст должен оставаться белым. -->
-        <!-- Нужно исправить: ну и underline у текста быть не должно. -->
-        <!-- Можно лучше: кажется, что h3 здесь это не заголовок, а параграф. -->
+        </p>
+        <!-- Нужно исправить: у h3 жирность шрифта не по макету.+++ corrected -->
+        <!-- Нужно исправить: при ховере фон должен затемняться, а текст должен оставаться белым. +++corrected-->
+        <!-- Нужно исправить: ну и underline у текста быть не должно. +++corrected-->
+        <!-- Можно лучше: кажется, что h3 здесь это не заголовок, а параграф. corrected-->
       </a>
       <div class="emblem">
         <h2 class="title emblem__title">
