--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
               class="item__image"
             />
             <p class="item__city">Елабуга</p>
-            <!-- Нужно исправить: по макету у герба Елабуги под деревом нет белого фона. -->
+            <!-- Нужно исправить: по макету у герба Елабуги под деревом нет белого фона. +++исправил -->
           </div>
           <div class="emblem__item">
             <img src="foto/perm.png" alt="Герб Перьми" class="item__image" />
@@ -528,7 +528,7 @@
             <p class="item__city">Пермь</p>
           </div>
         </div>
-        <!-- Нужно исправить: отступ между первым гербом и текстом по макету, а у остальных гербов отступ больше, чем в макете. -->
+        <!-- Нужно исправить: отступ между первым гербом и текстом по макету, а у остальных гербов отступ больше, чем в макете.  +++исправил-->
       </div>
       <div class="barentsburg">
         <h2 class="title barentsburg__title">Баренцбург</h2>
