--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
           Зачем путешествовать по своему дому
         </h3>
         <div class="intro__content-row">
-          <p class="text intro__content-row intro__content-row_text">
+          <p class="text  intro__text">
             <!-- 
             Нужно исправить: 
             Ну и простой модификатор применер не по назначению.        +++Простой модификатор, имеется ввиду text? Но он же задаёт стиль общим шрифтам
-            Под простым модификатором имеется ввиду это - intro__content-row_text.
+            Под простым модификатором имеется ввиду это - intro__content-row_text. ++++исправил
 
             Простые модификаторы в БЭМ применяются для каких-то бинарных штук. У которых только два состояния.
             Например, для активного языка в хедере можно использовать простой модификатор _isActive. Т.к. тут может быть только два состояния - язык или активен или нет.
@@ -63,7 +63,7 @@
             стране. Мы выбрали и описали некоторые интересные места, достойные
             вашего отпуска.
           </p>
-          <div class="intro__contenr-row_autor">
+          <div class="intro__autor">
           <!-- 
             Нужно исправить: 
             Выше я писал комментарий "На теге не может быть класс модификатора без класса блока или элемента, который этим модификатором модифицируется.", но 
@@ -71,43 +71,43 @@
 
             Сейчас пройдусь по всей работе и добавлю комментарии рядом со всеми подобными ошибками.
           -->
-            <p class="intro__content-row_text_autor">
+            <p class="intro__text-autor">
             <!-- Нужно исправить: БЭМ сущность содержит в себе только модификатор -->
               Автор текста:
-              <span class="content-row__span-accent"> В.В.Пупкин</span>
+              <span class="intro__span-accent"> В.В.Пупкин</span>
             </p>
-            <p class="intro__content-row_text_autor">
+            <p class="intro__text-autor">
             <!-- Нужно исправить: БЭМ сущность содержит в себе только модификатор -->
-              Дата:<span class="content-row__span-accent"> 17.06.17</span>
+              Дата:<span class="intro__span-accent"> 17.06.17</span>
             </p>
           </div>
         </div>
         <ul class="intro__list">
-          <li class="intro__list_text">
+          <li class="intro__list-text">
           <!-- Нужно исправить: БЭМ сущность содержит в себе только модификатор -->
-            Часовых поясов<span class="list_text-span"> 11</span>
+            Часовых поясов<span class="intro__span-accent"> 11</span>
             <!-- Нужно исправить: БЭМ сущность содержит в себе только модификатор -->
           </li>
-          <li class="intro__list_text">
+          <li class="intro__list-text">
           <!-- Нужно исправить: БЭМ сущность содержит в себе только модификатор -->
             Объектов природного наследия ЮНЕСКО
-            <span class="list_text-span"> 12</span>
+            <span class="intro__span-accent"> 12</span>
           <!-- Нужно исправить: БЭМ сущность содержит в себе только модификатор -->
           </li>
-          <li class="intro__list_text">
+          <li class="intro__list-text">
           <!-- Нужно исправить: БЭМ сущность содержит в себе только модификатор -->
             Объектов культурного наследия ЮНЕСКО
-            <span class="list_text-span"> 16</span>
+            <span class="intro__span-accent"> 16</span>
             <!-- Нужно исправить: БЭМ сущность содержит в себе только модификатор -->
           </li>
-          <li class="intro__list_text">
+          <li class="intro__list-text">
           <!-- Нужно исправить: БЭМ сущность содержит в себе только модификатор -->
-            Природных заповедников <span class="list_text-span"> 105</span>
+            Природных заповедников <span class="intro__span-accent"> 105</span>
             <!-- Нужно исправить: БЭМ сущность содержит в себе только модификатор -->
           </li>
-          <li class="intro__list_text">
+          <li class="intro__list-text">
           <!-- Нужно исправить: БЭМ сущность содержит в себе только модификатор -->
-            Аэропортов <span class="list_text-span"> 241</span>
+            Аэропортов <span class="intro__span-accent"> 241</span>
             <!-- Нужно исправить: БЭМ сущность содержит в себе только модификатор -->
           </li>
         </ul>
