--- a/index.html
+++ b/index.html
@@ -67,48 +67,48 @@
           <!-- 
             Нужно исправить: 
             Выше я писал комментарий "На теге не может быть класс модификатора без класса блока или элемента, который этим модификатором модифицируется.", но 
-            забыл добавить, что это нужно исправить по всей работе =(
+            забыл добавить, что это нужно исправить по всей работе =( +++Исправил
 
             Сейчас пройдусь по всей работе и добавлю комментарии рядом со всеми подобными ошибками.
           -->
             <p class="intro__text-autor">
-            <!-- Нужно исправить: БЭМ сущность содержит в себе только модификатор -->
+            <!-- Нужно исправить: БЭМ сущность содержит в себе только модификатор +++Исправил-->
               Автор текста:
               <span class="intro__span-accent"> В.В.Пупкин</span>
             </p>
             <p class="intro__text-autor">
-            <!-- Нужно исправить: БЭМ сущность содержит в себе только модификатор -->
+            <!-- Нужно исправить: БЭМ сущность содержит в себе только модификатор +++Исправил-->
               Дата:<span class="intro__span-accent"> 17.06.17</span>
             </p>
           </div>
         </div>
         <ul class="intro__list">
           <li class="intro__list-text">
-          <!-- Нужно исправить: БЭМ сущность содержит в себе только модификатор -->
+          <!-- Нужно исправить: БЭМ сущность содержит в себе только модификатор +++Исправил-->
             Часовых поясов<span class="intro__span-accent"> 11</span>
-            <!-- Нужно исправить: БЭМ сущность содержит в себе только модификатор -->
+            <!-- Нужно исправить: БЭМ сущность содержит в себе только модификатор +++Исправил-->
           </li>
           <li class="intro__list-text">
-          <!-- Нужно исправить: БЭМ сущность содержит в себе только модификатор -->
+          <!-- Нужно исправить: БЭМ сущность содержит в себе только модификатор +++Исправил-->
             Объектов природного наследия ЮНЕСКО
             <span class="intro__span-accent"> 12</span>
-          <!-- Нужно исправить: БЭМ сущность содержит в себе только модификатор -->
+          <!-- Нужно исправить: БЭМ сущность содержит в себе только модификатор +++Исправил-->
           </li>
           <li class="intro__list-text">
-          <!-- Нужно исправить: БЭМ сущность содержит в себе только модификатор -->
+          <!-- Нужно исправить: БЭМ сущность содержит в себе только модификатор +++Исправил-->
             Объектов культурного наследия ЮНЕСКО
             <span class="intro__span-accent"> 16</span>
-            <!-- Нужно исправить: БЭМ сущность содержит в себе только модификатор -->
+            <!-- Нужно исправить: БЭМ сущность содержит в себе только модификатор +++Исправил-->
           </li>
           <li class="intro__list-text">
-          <!-- Нужно исправить: БЭМ сущность содержит в себе только модификатор -->
+          <!-- Нужно исправить: БЭМ сущность содержит в себе только модификатор +++Исправил-->
             Природных заповедников <span class="intro__span-accent"> 105</span>
-            <!-- Нужно исправить: БЭМ сущность содержит в себе только модификатор -->
+            <!-- Нужно исправить: БЭМ сущность содержит в себе только модификатор +++Исправил-->
           </li>
           <li class="intro__list-text">
-          <!-- Нужно исправить: БЭМ сущность содержит в себе только модификатор -->
+          <!-- Нужно исправить: БЭМ сущность содержит в себе только модификатор +++Исправил-->
             Аэропортов <span class="intro__span-accent"> 241</span>
-            <!-- Нужно исправить: БЭМ сущность содержит в себе только модификатор -->
+            <!-- Нужно исправить: БЭМ сущность содержит в себе только модификатор +++Исправил-->
           </li>
         </ul>
       </div>
